
package mysql;

message tb_role_raid{
    required uint32 role_id = 1;
    required uint32 raid_id = 2;
    required uint32 star_num = 3;
    required uint32 fast_tick = 4;
    required uint32 last_complete_time = 5;
    required uint32 complete_count = 6;
    required uint32 create_time = 7;
    required uint32 auto_time = 8;
    required uint32 elite_star_num = 9;
    required uint32 elite_fast_tick = 10;
    required uint32 elite_last_complete_time = 11;
    required uint32 elite_complete_count = 12;
    required uint32 elite_create_time = 13;
    required uint32 elite_auto_time = 14;
    required uint32 elite_enter_count = 15;
}
